javascript/ql/test/query-tests/NodeJS/InvalidExport/tst5.js
module.exports = exports;

exports = {}; // $ Alert - reassignment above should appear below
exports.a = 12;
